# RandomCallPlus

./: .gitignore  CMakeLists.txt  README.md  caddstudentwindow.cpp  caddstudentwindow.h  caddstudentwindow.ui  cchangeclasswindow.cpp  cchangeclasswindow.h  cchangeclasswindow.ui  ccreateclasswindow.cpp  ccreateclasswindow.h  ccreateclasswindow.ui  ccreateprizewindow.cpp  ccreateprizewindow.h  ccreateprizewindow.ui  cdeleteclasswindow.cpp  cdeleteclasswindow.h  cdeleteclasswindow.ui  cdeletestudentwindow.cpp  cdeletestudentwindow.h  cdeletestudentwindow.ui  cmainwindow.cpp  cmainwindow.h  cmainwindow.ui  config.h  cpythreadstatelock.cpp  cpythreadstatelock.h  cshowotheronewindow.cpp  cshowotheronewindow.h  cshowotheronewindow.ui  cstatisticswindow.cpp  cstatisticswindow.h  cstatisticswindow.ui  cstudentdatalist.cpp  cstudentdatalist.h  cstudentdatalist.ui  handleword.py  main.cpp
